--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -274,3 +274,19 @@ td {
 .section-social_accounts .prop {
   width: 100px;
 }
+
+/* line 197, ../sass/main.scss */
+.section-education .school {
+  line-height: 1.3;
+  margin-bottom: 4px;
+}
+/* line 202, ../sass/main.scss */
+.section-education .school_name {
+  font-size: 16px;
+  font-weight: bold;
+}
+/* line 207, ../sass/main.scss */
+.section-education .prop {
+  width: auto;
+  margin-right: 4px;
+}
