Some styling fixes on education section

--- a/server/static/sass/main.scss
+++ b/server/static/sass/main.scss
@@ -204,12 +204,12 @@ td {
     }
 
     .school_name {
-        font-size: 16px;
         font-weight: bold;
     }
 
     .prop {
         width: auto;
+        font-weight: normal;
         margin-right: 4px;
     }
 }
