--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -287,11 +287,11 @@ td {
 }
 /* line 206, ../sass/main.scss */
 .section-education .school_name {
-  font-size: 16px;
   font-weight: bold;
 }
-/* line 211, ../sass/main.scss */
+/* line 210, ../sass/main.scss */
 .section-education .prop {
   width: auto;
+  font-weight: normal;
   margin-right: 4px;
 }
