--- a/server/static/sass/_globals.scss
+++ b/server/static/sass/_globals.scss
@@ -17,7 +17,9 @@ $standalone: false;
 /* ========== SIZING AND LAYOUT ============================================= */
 
 $app_width: 400px;
-$app_height: 500px;
+
+// subtract a little off the actual app height to prevent double scrolling
+$app_height: 600px - 20px;
 
 $app_border_radius: 10px;
 
